# uenroll

./: .gitignore  .oxfmtrc.json  .prettierignore  LICENSE  README.md  compose.yml  cspell.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  prettier.config.ts  turbo.json  vercel.json
.changeset/: afraid-insects-hunt.md  afraid-spies-tan.md  better-corners-think.md  better-teams-punch.md  bold-feet-read.md  busy-flowers-win.md  calm-carpets-drop.md  calm-icons-reply.md  chubby-news-retire.md  common-wolves-travel.md  config.json  cruel-islands-smoke.md  curly-signs-speak.md  cyan-wombats-yawn.md  dirty-ravens-doubt.md  dull-readers-open.md  eager-pears-like.md  early-shoes-retire.md  early-terms-pump.md  early-years-draw.md  evil-schools-invite.md  fair-cloths-fold.md  fair-pans-rhyme.md  famous-garlics-begin.md  famous-news-start.md  fast-lizards-wait.md  few-clubs-open.md  forty-cats-tease.md  free-carrots-tie.md  funny-toys-pay.md  fuzzy-nights-play.md  giant-snakes-talk.md  gold-gifts-vanish.md  happy-flies-sip.md  hip-lies-heal.md  honest-dancers-help.md  hot-months-relate.md  itchy-bugs-beg.md  (+57 more)
apps/web/generator/: Cargo.toml
apps/web/generator/pkg/: generator.d.ts  generator.js  generator_bg.js  generator_bg.wasm  package.json
apps/web/generator/public/wasm/: generator.js  generator_bg.wasm
apps/web/generator/src/: datetime.rs  generator.rs  lib.rs  types.rs
apps/web/generator/src/tests/: combinations_test.rs  mod.rs  schedule_generation.rs
apps/web/generator/src/tests/data/: course_data.json
(+243 files in other folders)
