[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[lib]
name = "generator"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.104"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
time-tz = "2.0"
